syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/kierquebs/simplebank.kierquebral.com/pb";

message CreateUserRequest {
    string username  = 1;
    string first_name = 2;
    string middle_name = 3;
    string last_name = 4;
    string email = 5;
    string password = 6;
}

message CreateUserResponse {
    User user = 1;
}





